# FarmCast

./: .gitignore  FARMCAST.md  README.md  generate_commits.ps1  temp.txt
farmcast-ml/: .gitignore  README.md  pyproject.toml  requirements-ml.txt
farmcast-ml/configs/: app_config.yaml  monitoring_config.yaml  retraining_config.yaml  training_config.yaml
farmcast-ml/configs/domain/: crops.yaml  diseases.yaml  seasons.yaml  soils.yaml
farmcast-ml/configs/schemas/: feature_schema.yaml  price_schema.yaml  registry_schema.yaml  yield_schema.yaml
farmcast-ml/models/registry/: model_registry.json
farmcast-ml/scripts/: run_api.sh  run_inference.sh  run_retraining.sh  run_training.sh
farmcast-ml/src/: __init__.py
farmcast-ml/src/api/: auth.py  dependencies.py  ml_service.py  schemas.py
farmcast-ml/src/core/: augmentation.py  callbacks.py  config.py  deterministic.py  exceptions.py  hashing.py  logging.py  losses.py  metrics.py
farmcast-ml/src/features/: build_geo_feature_vector.py  column_normalizer.py  determine_season.py  persistence.py  price_feature_builder.py  weather_repository.py  yield_feature_builder.py
farmcast-ml/src/inference/: __init__.py  yield_predictor.py
farmcast-ml/src/ingestion/: price_loader.py  validator.py  weather_loader.py  yield_loader.py
farmcast-ml/src/monitoring/: alert_manager.py  drift_detector.py  performance_monitor.py
farmcast-ml/src/pipelines/: utils.py  (+3 more)
farmcast-ml/tests/: test_api.py  test_disease_model.py  test_feature_engineering.py  test_ingestion.py  test_price_model.py  test_registry.py  test_yield_model.py
(+299 files in other folders)
